# codescope-mcp-preflight

./: .gitignore  .graphifyignore  AGENTS.md  BUILD_WEEK_CHANGELOG.md  CODESCOPE_CODEX_BUILD_MASTER.md  README.md  codescope.toml  devpost-submission.md  pyproject.toml
.codex/: config.toml  config.toml.example
docs/: .CHAT_MEMORY.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CODEX_HANDOFF.md  COVERAGE.md  DEMO_EVIDENCE.md  DEMO_SCRIPT.md  FINAL_RELEASE_CHECKLIST.md  HACKATHON_COMPLIANCE.md  JUDGE_TESTING.md  PHASE11_OWNER_REVIEW.md  SCREENSHOT_PLAN.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  VIDEO_SCRIPT.md
docs/design-history/: CODESCOPE_SPEC_v2.md
docs/environment/: codex-mcp-list.txt  tool-versions.txt
examples/: codex_mcp_config.toml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: benchmark.py  demo.py  verify_clean_setup.py
src/codescope/: __init__.py  chunker.py  cli.py  config.py  embedder.py  engine.py  exceptions.py  indexer.py  models.py  parser.py  server.py  storage.py
tests/: conftest.py
tests/e2e/: test_duplication_prevention.py
tests/integration/: test_cli.py  test_embedder_real_model.py  test_indexer_pipeline.py  test_mcp_tools.py  test_query_engine.py
tests/release/: test_benchmark.py  test_clean_setup.py
tests/security/: test_cli_safety.py  test_mcp_safety.py  test_path_safety.py  test_phase10_safety.py  test_phase4_safety.py  test_phase5_safety.py
tests/unit/: test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_engine.py  test_gitignore.py  test_indexer.py  test_language.py  (+5 more)
(+10 files in other folders)
